--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -40,9 +40,9 @@
   <ion-card *ngIf="!quotes.length && sychedData">
     <ion-card-content>Sorry, We didn't find any Quotes created by You. 
       <br>
-      <br> Click Add icon at the bottom right of the screen to create a quote</ion-card-content>
+      <br> Go to particular site detail page and Click Add icon at the bottom right of the screen to create a quote</ion-card-content>
   </ion-card>
-  <ion-fab right bottom>
+  <!-- <ion-fab right bottom>
     <button ion-fab color="primary" (click)="createQuote()"><ion-icon name="add"></ion-icon></button>
-  </ion-fab> 
+  </ion-fab>  -->
 </ion-content>
