--- a/src/pages/site-details/site-details.html
+++ b/src/pages/site-details/site-details.html
@@ -5,8 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <ion-title>{{siteDetails.site.site_name}}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="uploadDocument()">
@@ -17,7 +16,6 @@
       </button>
     </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
